# wafer_anomaly_image_synthesis

./: .gitattributes  README.md  copy_mismatched_images.py  make_dataset.ipynb  pic_mix.py  requirements.txt  test.ipynb  引き続きについて.txt
anomaly_detection/: README.md  pyproject.toml  requirements.txt
anomaly_detection/bevel_ml/: anomaly_map_visualizer.py  callbacks.py  data.py  db.py  env.py  result_visualizer.py  transforms.py
anomaly_detection/bevel_ml/metrics/: threshold.py
anomaly_detection/bevel_ml/models/: __init__.py  base.py  patchcore.py  reverse_distillation.py  timm.py  vae.py
anomaly_detection/bevel_ml/raw_data/: __init__.py  _original.py  _selection.py  _split.py
anomaly_detection/bevel_ml/utils/: performance.py
anomaly_detection/config/: config_ad.yaml  config_bin_clf.yaml  config_mul_clf.yaml
anomaly_detection/config/case_ad/: rd4ad_resnet18_512_cc.yaml
anomaly_detection/config/case_bin_clf/: resnet50_cc copy 2.yaml  resnet50_cc copy 3.yaml  resnet50_cc copy.yaml  resnet50_cc.yaml
anomaly_detection/config/case_mul_clf/: resnet50_cc_mul.yaml
anomaly_detection/config/used/: rd4ad_resnet18_256_cc.yaml  rd4ad_resnet18_512_cc.yaml
anomaly_detection/scripts/: 20250124.bat  _append_python_path.py  eval_anomaly_detection.py  eval_classification_bin.py  eval_classification_mul.py  meas_dataloader_time.py  temp_draw_hist.ipynb
anomaly_detection/tests/: _append_python_path.py  test_analyze_metrics.py  test_anomalib.py  test_data.py  test_detector_example.py  test_hello.py  test_threshold.py  test_timer.py
calibration/: 01_csv_abstract.ipynb  (+3 more)
(+411 files in other folders)
