[project]
name = "trunk"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "torch==2.2.1+cu121",
    "torchvision==0.17.1+cu121",
    "torchaudio==2.2.1+cu121",
    "pandas>=2.2.1",
    "lightning>=2.2.1",
    "omegaconf>=2.3.0",
    "scikit-learn>=1.4.1.post1",
    "hydra-core>=1.3.2",
    "tqdm>=4.66.2",
    "torchmetrics>=1.3.1",
    "timm>=0.9.16",
    "matplotlib>=3.8.3",
    "anomalib>=1.0.1",
    "opencv-python>=4.9.0.80",
    "imgaug>=0.4.0",
    "kornia>=0.7.2",
    "einops>=0.8.0",
    "freia>=0.2",
    "open-clip-torch>=2.24.0",
    "wandb>=0.16.6",
    "openvino>=2024.1.0",
    "dataframe_image>=0.2.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "notebook>=7.1.1",
    "pytest>=8.0.2",
    "matplotlib>=3.8.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/trunk"]

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121/"
type = "index"
